<?php

namespace App\Modules\BankManager\Models;

use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;
use App\Modules\BankManager\Models\FixedExpenses\FixedExpense;



class OperationSubCategory extends Model
{
    use HasFactory;

    protected $table = 'app_bank_manager_operation_sub_categories';

    protected $fillable = ['operation_category_id', 'name'];

    /**
     * Obtém o tipo de operação via categoria
     * (operation_type_id foi removido para evitar redundância)
     */
    public function operationType()
    {
        return $this->operationCategory->operationType();
    }

    /**
     * Relacionamento com a categoria de operação
     */
    public function operationCategory()
    {
        return $this->belongsTo(OperationCategory::class, 'operation_category_id');
    }

    public function transactions()
    {
        return $this->hasMany(Transaction::class, 'operation_sub_category_id');
    }

    public function fixedExpenses()
    {
        return $this->hasMany(FixedExpense::class, 'operation_sub_category_id');
    }
}
